# BioAcousticStreamEngine

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  bioacoustic-stream-engine.desktop  docker-compose.yml  docker-entrypoint.sh  install.sh  kiosk.sh  pyproject.toml  start_web.sh
config/: secrets.yaml.example  settings.yaml  settings.yaml.example
docs/screenshots/: README.md
scripts/: download_species_images.py
src/ecoacoustics/: __init__.py  clip_manager.py  main.py  pipeline.py  scheduler.py  session.py  watchdog.py
src/ecoacoustics/api/: app.py  pipeline_manager.py  state.py
src/ecoacoustics/api/routes/: clips.py  detections.py  devices.py  gallery.py  reports.py  schedule.py  settings.py  status.py
src/ecoacoustics/audio/: __init__.py  capture.py  processor.py
src/ecoacoustics/classifiers/: __init__.py  base.py  bat.py  bee.py  bird.py  insect.py  soil.py  soil_bandpassFilter_original.py  soil_wormCSV_reference.csv
src/ecoacoustics/output/: __init__.py  logger.py  mqtt_publisher.py
src/ecoacoustics/web/: app.js  index.html  style.css
src/ecoacoustics/web/species_images/: _credits.json
tests/: test_pipeline.py
training/notebooks/: 00_verify_setup.ipynb  01_explore_data.ipynb  02_prepare_labels.ipynb  03_train_model.ipynb
